# SSL4POLYP

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements-pip.txt  requirements.lock.txt  requirements.txt  utils.py
Classification/: eval_classification.py  eval_outputs.py  manifests.py  run_all_pretrainings.py  train_classification.py
Models/: models.py
checkpoints/: .gitignore  README.md
config/: base.yaml
data/: .gitignore  README.md  roots.example.json
docs/: result_generation_contract.md
outputs/: .gitignore  README.md
polypdb/: cli.py
reporting/: __init__.py  experiment5b_gap_plan.md  metrics.py  threshold_specs.py
results/: .gitignore  README.md
scripts/: aggregate_metrics.py  check_paths.py  exp1_report.py  exp2_report.py  exp3_morphology_report.py  exp4_report.py  exp5a_report.py  exp5b_report.py  exp5c_report.py  print_config_models.py  print_config_seeds.py  run_exp1.sh  run_exp1_smoke.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh  run_exp5a.sh  run_exp5b.sh  run_exp5c.sh  run_exps.sh
tests/: test_bootstrapper.py  test_build_variants.py  test_canonical_parent_resolution.py  test_check_paths.py  test_classification_eval_mode.py  test_common_metrics.py  test_display_helpers.py  test_eval_classification.py  test_exp2_report.py  test_exp3_report.py  test_exp4_report.py  test_exp5a_report.py  test_exp5b_report.py  test_exp5c_config.py  test_exp5c_report.py  test_final_outputs.py  test_finetune_modes.py  test_finetune_schedule.py  test_manifest_schema_validation.py  test_manifest_snapshot.py  test_metric_aggregation.py  test_metric_block_export.py  test_metrics_provenance_fewshot.py  test_parent_provenance.py  test_performance_metrics.py  test_perturbation_metadata.py  test_polypgen_output_export.py  test_report_outputs_missing.py  test_reporting_inputs.py  test_result_loader_utilities.py  test_scheduler_warmup_config.py  test_seed_resolution.py  test_tensorboard_logging.py  test_thresholds.py  (+2 more)
(+183 files in other folders)
