[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl4polyp"
version = "0.1.0"
description = "Research code for SSL4POLYP experiments and utilities"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Ivan Rodriguez-Conde"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy==1.21.6",
  "opencv-python==4.5.5.64",
  "Pillow==10.4.0",
  "scikit-learn==1.0.2",
  "timm==0.3.2",
  "torch==1.9.0+cu111",
  "torchmetrics==1.1.2",
  "torchvision==0.10.0+cu111",
  "PyYAML==6.0.2",
]

[project.scripts]
ssl4polyp-train = "ssl4polyp.classification.train_classification:main"
polypdb = "ssl4polyp.polypdb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

